# c-programming-a-modern-approach

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ch_02/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.md  ex_07.md  ex_08.md  ex_09.md  ex_10.md
ch_02/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c
ch_03/exercises/: ex_01.md  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c
ch_03/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c
ch_04/exercises/: ex_01.c  ex_02.md  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.md  ex_08.md  ex_09.c  ex_10.c  ex_11.c  ex_12.c  ex_13.md  ex_14.md  ex_15.c
ch_04/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c
ch_05/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.c  ex_08.c  ex_09.md  ex_10.c  ex_11.c
ch_05/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c
ch_06/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.md  ex_06.c  ex_07.c  ex_08.md  ex_09.c  ex_10.c  ex_11.md  ex_12.c  ex_13.c  ex_14.md
ch_06/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c  pp_12.c
ch_07/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.md  ex_06.md  ex_07.md  ex_08.md  ex_09.md  ex_10.md  ex_11.md  ex_12.md  ex_13.md  ex_14.md  ex_15.c
ch_07/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c  pp_12.c  pp_13.c  pp_14.c  pp_15.c
ch_08/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.c  ex_06.md  ex_07.md  ex_08.md  ex_09.c  ex_10.c  ex_11.c
ch_08/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c  pp_12.c  pp_13.c  pp_14.c  pp_15.c  pp_16.c  pp_17.c
ch_09/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.md  ex_08.md  ex_09.md  ex_10.c  ex_11.c  ex_12.c  ex_13.c  ex_14.c  ex_15.c  ex_16.c  ex_17.c  ex_18.c  ex_19.c
ch_09/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c
ch_10/exercises/: ex_01.md  ex_02.md  ex_03.md
ch_10/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c
ch_11/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.c  ex_05.c  ex_06.c  ex_07.c  ex_08.c
ch_11/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c
ch_12/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.c  ex_05.md  ex_06.c  ex_07.c  ex_08.c  ex_09.c  ex_10.c  ex_11.c  ex_12.c  ex_13.c  ex_14.c  ex_15.c  ex_16.c  ex_17.c  ex_18.c
ch_12/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c
ch_13/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.md  ex_08.c  ex_09.c  ex_10.md  ex_11.c  ex_12.c  ex_13.c  ex_14.md  ex_15.c  ex_16.c  ex_17.c  ex_18.c
ch_13/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c  pp_12.c  pp_13.c  pp_14.c  pp_15.c  pp_16.c  pp_17.c  pp_18.c
ch_14/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.c  ex_08.c  ex_09.c  ex_10.md  ex_11.c  ex_12.c  ex_13.c  ex_14.c  ex_15.c  ex_16.c
ch_15/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.md  ex_06.md
ch_15/programming_projects/pp_01/: justify  justify.c  line.c  word.c
ch_15/programming_projects/pp_02/: justify  justify.c  line.c  quote  word.c
ch_15/programming_projects/pp_03/: qsort  qsort.c  quicksort.c  quicksort.h
ch_15/programming_projects/pp_04/: readline.c  readline.h  remind  remind.c
ch_15/programming_projects/pp_05/: makefile  rpn_calculator  rpn_calculator.c  stack.c  stack.h
ch_16/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.c  ex_08.c  ex_09.c  ex_10.c  ex_11.md  ex_12.md  ex_13.md  ex_14.c  ex_15.md  ex_16.md  ex_17.md  ex_18.c  ex_19.md  ex_20.md  ex_21.md  ex_22.c
ch_16/programming_projects/: pp_01.c  pp_05.c  pp_06.c
ch_16/programming_projects/pp_02/: inventory  inventory.c
ch_17/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.md  ex_06.md  ex_07.md  ex_08.c  ex_09.md  ex_10.md  ex_11.md  ex_12.md  ex_13.md  ex_14.md  ex_15.c  ex_16.c  ex_17.md  ex_18.md  ex_19.c
ch_17/programming_projects/: pp_05.c  pp_06.c  pp_07.c
ch_18/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.md  ex_06.md  ex_07.md  ex_08.md  ex_09.md  ex_10.md  ex_11.md  ex_12.md  ex_13.md  ex_14.md  ex_15.md
ch_20/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.md  ex_05.md  ex_06.c  ex_07.c  ex_08.md  ex_09.c  ex_10.c  ex_11.c  ex_12.c  ex_13.md  ex_14.c  ex_15.md  ex_16.c
ch_20/programming_projects/: pp_01.c
ch_21/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.md  ex_05.md  ex_06.md  ex_07.md
ch_21/programming_projects/: pp_01.c
ch_22/exercises/: ex_01.md  ex_02.md  ex_03.md  ex_04.c  ex_05.md  ex_06.c  ex_07.md  ex_08.md  ex_09.md  ex_10.c  ex_11.md  ex_12.md  ex_13.c  ex_14.c  ex_15.c  ex_16.c
ch_22/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c  pp_08.c  pp_09.c  pp_10.c  pp_11.c  pp_12.c  pp_13.c  pp_14.c  pp_16.c  pp_17.c  pp_18.c  pp_19.c
ch_23/exercises/: ex_01.c  ex_02.c  ex_03.md  ex_04.c  ex_05.c  ex_06.md  ex_07.md  ex_08.c  ex_09.c  ex_10.md  ex_11.c  ex_12.c  ex_13.c
ch_23/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c  pp_07.c
ch_24/exercises/: ex_01.md  ex_02.md  ex_03.c  ex_04.c  ex_05.c
ch_25/exercises/: ex_01.md  ex_02.c  ex_03.md  ex_04.md  ex_05.md  ex_06.md  ex_07.md
ch_25/programming_projects/: pp_01.c  pp_02.c
ch_26/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c  ex_05.c  ex_06.c  ex_07.md  ex_08.c  ex_09.c  ex_10.c  ex_11.md  ex_12.c  ex_13.c
ch_26/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c  pp_05.c  pp_06.c
ch_27/exercises/: ex_01.c  ex_02.c  ex_03.c  ex_04.c
ch_27/programming_projects/: pp_01.c  pp_02.c  pp_03.c  pp_04.c
(+64 files in other folders)
