cmake_minimum_required(VERSION 3.30)
project(c-programming-a-modern-approach C)

add_executable(c-programming-a-modern-approach
           ch_02/exercises/ex_01.c
        #   ch_02/exercises/ex_02.c
        #   ch_02/exercises/ex_03.c
        #   ch_02/exercises/ex_04.c
        #   ch_02/exercises/ex_05.c
        #   ch_02/programming_projects/pp_01.c
        #   ch_02/programming_projects/pp_02.c
        #   ch_02/programming_projects/pp_03.c
        #   ch_02/programming_projects/pp_04.c
        #   ch_02/programming_projects/pp_05.c
        #   ch_02/programming_projects/pp_06.c
        #   ch_02/programming_projects/pp_07.c
        #   ch_02/programming_projects/pp_08.c
        #   ch_03/exercises/ex_02.c
        #   ch_03/exercises/ex_03.c
        #   ch_03/exercises/ex_04.c
        #   ch_03/exercises/ex_05.c
        #   ch_03/exercises/ex_06.c
        #   ch_03/programming_projects/pp_01.c
        #   ch_03/programming_projects/pp_02.c
        #   ch_03/programming_projects/pp_03.c
        #   ch_03/programming_projects/pp_04.c
        #   ch_03/programming_projects/pp_05.c
        #   ch_03/programming_projects/pp_06.c
        #   ch_04/exercises/ex_01.c
        #   ch_04/exercises/ex_03.c
        #   ch_04/exercises/ex_04.c
        #   ch_04/exercises/ex_05.c
        #   ch_04/exercises/ex_06.c
        #   ch_04/exercises/ex_09.c
        #   ch_04/exercises/ex_10.c
        #   ch_04/exercises/ex_11.c
        #   ch_04/exercises/ex_12.c
        #   ch_04/exercises/ex_15.c
        #   ch_04/programming_projects/pp_01.c
        #   ch_04/programming_projects/pp_02.c
        #   ch_04/programming_projects/pp_03.c
        #   ch_04/programming_projects/pp_04.c
        #   ch_04/programming_projects/pp_05.c
        #   ch_04/programming_projects/pp_06.c
        #   ch_05/exercises/ex_01.c
        #   ch_05/exercises/ex_02.c
        #   ch_05/exercises/ex_03.c
        #   ch_05/exercises/ex_04.c
        #   ch_05/exercises/ex_05.c
        #   ch_05/exercises/ex_06.c
        #   ch_05/exercises/ex_07.c
        #   ch_05/exercises/ex_08.c
        #   ch_05/exercises/ex_10.c
        #   ch_05/exercises/ex_11.c
        #   ch_05/programming_projects/pp_01.c
        #   ch_05/programming_projects/pp_02.c
        #   ch_05/programming_projects/pp_03.c
        #   ch_05/programming_projects/pp_04.c
        #   ch_05/programming_projects/pp_05.c
        #   ch_05/programming_projects/pp_06.c
        #   ch_05/programming_projects/pp_07.c
        #   ch_05/programming_projects/pp_08.c
        #   ch_05/programming_projects/pp_09.c
        #   ch_05/programming_projects/pp_10.c
        #   ch_05/programming_projects/pp_11.c
        #   ch_06/exercises/ex_03.c
        #   ch_06/exercises/ex_06.c
        #   ch_06/exercises/ex_07.c
        #   ch_06/exercises/ex_09.c
        #   ch_06/exercises/ex_10.c
        #   ch_06/exercises/ex_12.c
        #   ch_06/exercises/ex_13.c
        #   ch_06/exercises/ex_14.c
        #   ch_06/programming_projects/pp_01.c
        #   ch_06/programming_projects/pp_02.c
        #   ch_06/programming_projects/pp_03.c
        #   ch_06/programming_projects/pp_04.c
        #   ch_06/programming_projects/pp_05.c
        #   ch_06/programming_projects/pp_06.c
        #   ch_06/programming_projects/pp_07.c
        #   ch_06/programming_projects/pp_08.c
        #   ch_06/programming_projects/pp_09.c
        #   ch_06/programming_projects/pp_10.c
        #   ch_06/programming_projects/pp_11.c
        #   ch_06/programming_projects/pp_12.c
        #   ch_07/exercises/ex_15.c
        #   ch_07/programming_projects/pp_01.c
        #   ch_07/programming_projects/pp_02.c
        #   ch_07/programming_projects/pp_03.c
        #   ch_07/programming_projects/pp_04.c
        #   ch_07/programming_projects/pp_05.c
        #   ch_07/programming_projects/pp_06.c
        #   ch_07/programming_projects/pp_07.c
        #   ch_07/programming_projects/pp_08.c
        #   ch_07/programming_projects/pp_09.c
        #   ch_07/programming_projects/pp_10.c
        #   ch_07/programming_projects/pp_11.c
        #   ch_07/programming_projects/pp_12.c
        #   ch_07/programming_projects/pp_13.c
        #   ch_07/programming_projects/pp_14.c
        #   ch_07/programming_projects/pp_15.c
        #   ch_08/exercises/ex_05.c
        #   ch_08/exercises/ex_09.c
        #   ch_08/exercises/ex_10.c
        #   ch_08/exercises/ex_11.c
        #   ch_08/programming_projects/pp_01.c
        #   ch_08/programming_projects/pp_02.c
        #   ch_08/programming_projects/pp_03.c
        #   ch_08/programming_projects/pp_04.c
        #   ch_08/programming_projects/pp_05.c
        #   ch_08/programming_projects/pp_06.c
        #   ch_08/programming_projects/pp_07.c
        #   ch_08/programming_projects/pp_08.c
        #   ch_08/programming_projects/pp_09.c
        #   ch_08/programming_projects/pp_10.c
        #   ch_08/programming_projects/pp_11.c
        #   ch_08/programming_projects/pp_12.c
        #   ch_08/programming_projects/pp_13.c
        #   ch_08/programming_projects/pp_14.c
        #   ch_08/programming_projects/pp_15.c
        #   ch_08/programming_projects/pp_16.c
        #   ch_08/programming_projects/pp_17.c
        #   ch_09/exercises/ex_01.c
        #   ch_09/exercises/ex_02.c
        #   ch_09/exercises/ex_03.c
        #   ch_09/exercises/ex_04.c
        #   ch_09/exercises/ex_05.c
        #   ch_09/exercises/ex_06.c
        #   ch_09/exercises/ex_10.c
        #   ch_09/exercises/ex_11.c
        #   ch_09/exercises/ex_12.c
        #   ch_09/exercises/ex_13.c
        #   ch_09/exercises/ex_14.c
        #   ch_09/exercises/ex_15.c
        #   ch_09/exercises/ex_16.c
        #   ch_09/exercises/ex_17.c
        #   ch_09/exercises/ex_18.c
        #   ch_09/exercises/ex_19.c
        #   ch_09/programming_projects/pp_01.c
        #   ch_09/programming_projects/pp_02.c
        #   ch_09/programming_projects/pp_03.c
        #   ch_09/programming_projects/pp_04.c
        #   ch_09/programming_projects/pp_05.c
        #   ch_09/programming_projects/pp_06.c
        #   ch_09/programming_projects/pp_07.c
        #   ch_09/programming_projects/pp_08.c
        #   ch_10/programming_projects/pp_01.c
        #   ch_10/programming_projects/pp_02.c
        #   ch_10/programming_projects/pp_03.c
        #   ch_10/programming_projects/pp_04.c
        #   ch_10/programming_projects/pp_05.c
        #   ch_10/programming_projects/pp_06.c
        #   ch_10/programming_projects/pp_07.c
        #   ch_11/exercises/ex_04.c
        #   ch_11/exercises/ex_05.c
        #   ch_11/exercises/ex_06.c
        #   ch_11/exercises/ex_07.c
        #   ch_11/exercises/ex_08.c
        #   ch_11/programming_projects/pp_01.c
        #   ch_11/programming_projects/pp_02.c
        #   ch_11/programming_projects/pp_03.c
        #   ch_11/programming_projects/pp_04.c
        #   ch_12/exercises/ex_04.c
        #   ch_12/exercises/ex_06.c
        #   ch_12/exercises/ex_07.c
        #   ch_12/exercises/ex_08.c
        #   ch_12/exercises/ex_09.c
        #   ch_12/exercises/ex_10.c
        #   ch_12/exercises/ex_11.c
        #   ch_12/exercises/ex_12.c
        #   ch_12/exercises/ex_13.c
        #   ch_12/exercises/ex_14.c
        #   ch_12/exercises/ex_15.c
        #   ch_12/exercises/ex_16.c
        #   ch_12/exercises/ex_17.c
        #   ch_12/exercises/ex_18.c
        #   ch_12/programming_projects/pp_01.c
        #   ch_12/programming_projects/pp_02.c
        #   ch_12/programming_projects/pp_03.c
        #   ch_12/programming_projects/pp_04.c
        #   ch_12/programming_projects/pp_05.c
        #   ch_12/programming_projects/pp_06.c
        #   ch_12/programming_projects/pp_07.c
        #   ch_13/exercises/ex_01.c
        #   ch_13/exercises/ex_02.c
        #   ch_13/exercises/ex_03.c
        #   ch_13/exercises/ex_04.c
        #   ch_13/exercises/ex_05.c
        #   ch_13/exercises/ex_06.c
        #   ch_13/exercises/ex_08.c
        #   ch_13/exercises/ex_09.c
        #   ch_13/exercises/ex_11.c
        #   ch_13/exercises/ex_12.c
        #   ch_13/exercises/ex_13.c
        #   ch_13/exercises/ex_15.c
        #   ch_13/exercises/ex_16.c
        #   ch_13/exercises/ex_17.c
        #   ch_13/exercises/ex_18.c
        #   ch_13/programming_projects/pp_01.c
        #   ch_13/programming_projects/pp_02.c
        #   ch_13/programming_projects/pp_03.c
        #   ch_13/programming_projects/pp_04.c
        #   ch_13/programming_projects/pp_05.c
        #   ch_13/programming_projects/pp_06.c
        #   ch_13/programming_projects/pp_07.c
        #   ch_13/programming_projects/pp_08.c
        #   ch_13/programming_projects/pp_09.c
        #   ch_13/programming_projects/pp_10.c
        #   ch_13/programming_projects/pp_11.c
        #   ch_13/programming_projects/pp_12.c
        #   ch_13/programming_projects/pp_13.c
        #   ch_13/programming_projects/pp_14.c
        #   ch_13/programming_projects/pp_15.c
        #   ch_13/programming_projects/pp_16.c
        #   ch_13/programming_projects/pp_17.c
        #   ch_13/programming_projects/pp_18.c
        #   ch_14/exercises/ex_01.c
        #   ch_14/exercises/ex_02.c
        #   ch_14/exercises/ex_03.c
        #   ch_14/exercises/ex_04.c
        #   ch_14/exercises/ex_05.c
        #   ch_14/exercises/ex_06.c
        #   ch_14/exercises/ex_07.c
        #   ch_14/exercises/ex_08.c
        #   ch_14/exercises/ex_09.c
        #   ch_14/exercises/ex_11.c
        #   ch_14/exercises/ex_12.c
        #   ch_14/exercises/ex_13.c
        #   ch_14/exercises/ex_14.c
        #   ch_14/exercises/ex_15.c
        #   ch_14/exercises/ex_16.c
        #   ch_16/exercises/ex_01.c
        #   ch_16/exercises/ex_02.c
        #   ch_16/exercises/ex_03.c
        #   ch_16/exercises/ex_04.c
        #   ch_16/exercises/ex_05.c
        #   ch_16/exercises/ex_06.c
        #   ch_16/exercises/ex_07.c
        #   ch_16/exercises/ex_08.c
        #   ch_16/exercises/ex_09.c
        #   ch_16/exercises/ex_10.c
        #   ch_16/exercises/ex_14.c
        #   ch_16/exercises/ex_18.c
        #   ch_16/exercises/ex_22.c
        #   ch_16/programming_projects/pp_01.c
        #   ch_16/programming_projects/pp_05.c
        #   ch_16/programming_projects/pp_06.c
        #   ch_17/exercises/ex_01.c
        #   ch_17/exercises/ex_02.c
        #   ch_17/exercises/ex_03.c
        #   ch_17/exercises/ex_04.c
        #   ch_17/exercises/ex_08.c
        #   ch_17/exercises/ex_15.c
        #   ch_17/exercises/ex_16.c
        #   ch_17/exercises/ex_19.c
        #   ch_17/programming_projects/pp_05.c
        #   ch_17/programming_projects/pp_06.c
        #   ch_17/programming_projects/pp_07.c
        #   ch_20/exercises/ex_01.c
        #   ch_20/exercises/ex_02.c
        #   ch_20/exercises/ex_03.c
        #   ch_20/exercises/ex_06.c
        #   ch_20/exercises/ex_07.c
        #   ch_20/exercises/ex_08.c
        #   ch_20/exercises/ex_09.c
        #   ch_20/exercises/ex_10.c
        #   ch_20/exercises/ex_11.c
        #   ch_20/exercises/ex_12.c
        #   ch_20/exercises/ex_14.c
        #   ch_20/exercises/ex_16.c
        #   ch_20/programming_projects/pp_01.c
        #   ch_21/exercises/ex_06.c
        #   ch_21/programming_projects/pp_01.c
        #   ch_22/exercises/ex_04.c
        #   ch_22/exercises/ex_06.c
        #   ch_22/exercises/ex_10.c
        #   ch_22/exercises/ex_13.c
        #   ch_22/exercises/ex_14.c
        #   ch_22/exercises/ex_15.c
        #   ch_22/exercises/ex_16.c
        #   ch_22/programming_projects/pp_01.c
        #   ch_22/programming_projects/pp_02.c
        #   ch_22/programming_projects/pp_03.c
        #   ch_22/programming_projects/pp_04.c
        #   ch_22/programming_projects/pp_05.c
        #   ch_22/programming_projects/pp_06.c
        #   ch_22/programming_projects/pp_07.c
        #   ch_22/programming_projects/pp_08.c
        #   ch_22/programming_projects/pp_09.c
        #   ch_22/programming_projects/pp_10.c
        #   ch_22/programming_projects/pp_11.c
        #   ch_22/programming_projects/pp_12.c
        #   ch_22/programming_projects/pp_13.c
        #   ch_22/programming_projects/pp_14.c
        #   ch_22/programming_projects/pp_16.c
        #   ch_22/programming_projects/pp_17.c
        #   ch_22/programming_projects/pp_18.c
        #   ch_22/programming_projects/pp_19.c
        #   ch_23/exercises/ex_01.c
        #   ch_23/exercises/ex_02.c
        #   ch_23/exercises/ex_04.c
        #   ch_23/exercises/ex_05.c
        #   ch_23/exercises/ex_08.c
        #   ch_23/exercises/ex_09.c
        #   ch_23/exercises/ex_11.c
        #   ch_23/exercises/ex_12.c
        #   ch_23/exercises/ex_13.c
        #   ch_23/programming_projects/pp_01.c
        #   ch_23/programming_projects/pp_02.c
        #   ch_23/programming_projects/pp_03.c
        #   ch_23/programming_projects/pp_04.c
        #   ch_23/programming_projects/pp_05.c
        #   ch_23/programming_projects/pp_06.c
        #   ch_23/programming_projects/pp_07.c
        #   ch_24/exercises/ex_03.c
        #	ch_24/exercises/ex_04.c
        #	ch_24/exercises/ex_05.c
		#	ch_25/exercises/ex_02.c
		#	ch_25/programming_projects/pp_01.c
		#	ch_25/programming_projects/pp_02.c
		#	ch_26/exercises/ex_01.c
		#	ch_26/exercises/ex_02.c
		#	ch_26/exercises/ex_03.c
		#	ch_26/exercises/ex_04.c
		#	ch_26/exercises/ex_05.c
		#	ch_26/exercises/ex_06.c
		#	ch_26/exercises/ex_08.c
		#	ch_26/exercises/ex_09.c
		#	ch_26/exercises/ex_10.c
		#	ch_26/exercises/ex_12.c
		#	ch_26/exercises/ex_13.c
		#	ch_26/programming_projects/pp_01.c
		#	ch_26/programming_projects/pp_02.c
		#	ch_26/programming_projects/pp_03.c
		#	ch_26/programming_projects/pp_04.c
		#	ch_26/programming_projects/pp_05.c
		#	ch_26/programming_projects/pp_06.c
		#	ch_27/exercises/ex_01.c
		#	ch_27/exercises/ex_02.c
		#	ch_27/exercises/ex_03.c
		#	ch_27/exercises/ex_04.c
		#	ch_27/programming_projects/pp_01.c
		#	ch_27/programming_projects/pp_02.c
		#	ch_27/programming_projects/pp_03.c
		#	ch_27/programming_projects/pp_04.c
)

target_link_libraries(c-programming-a-modern-approach m)

add_compile_options(-O2 -fopt-info -Wall -W -pedantic -ansi -std=c99)